--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-/* Custom color scheme: blues, teals, navy, black, grey */
+/* More colours: blues, teals, navy, black, grey */
 :root {
   --primary-navy: #1e3a8a;
   --primary-blue: #2563eb;
